--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "engines": {
         "node": ">=8"
     },
+    "jest": {
+        "collectCoverage": true,
+        "coverageReporters": [
+            "text"
+        ]
+    },
     "bugs": {
         "url": "https://gitlab.com/jitesoft/open-source/javascript/yolog-plugins/file/issues"
     },
@@ -38,24 +44,24 @@
     },
     "devDependencies": {
         "@jitesoft/yolog": ">=2.5",
-        "core-js": "^3.1.4",
+        "core-js": "^3.2.1",
         "@babel/core": "^7.5.5",
-        "@jitesoft/babel-preset-main": "^1.4.0",
+        "@jitesoft/babel-preset-main": "^1.5.0",
         "babel-loader": "^8.0.6",
-        "cross-env": "^5.2.0",
-        "webpack": "^4.38.0",
-        "webpack-cli": "^3.3.6",
-        "babel-eslint": "^10.0.2",
-        "babel-jest": "^24.8.0",
-        "eslint": "^6.1.0",
-        "jest": "^24.8.0",
-        "@jitesoft/eslint-config": "^1.3.0"
+        "cross-env": "^5.2.1",
+        "webpack": "^4.39.3",
+        "webpack-cli": "^3.3.7",
+        "babel-eslint": "^10.0.3",
+        "babel-jest": "^24.9.0",
+        "eslint": "^6.3.0",
+        "jest": "^24.9.0",
+        "@jitesoft/eslint-config": "^1.4.0"
     },
     "scripts": {
         "test": "eslint src/ tests/ && jest",
         "build": "cross-env NODE_ENV=production webpack -p"
     },
     "dependencies": {
-        "@jitesoft/sprintf": "^0.0.13"
+        "@jitesoft/sprintf": "^0.0.15"
     }
 }
