--- a/package.json
+++ b/package.json
@@ -45,23 +45,23 @@
     "devDependencies": {
         "@jitesoft/yolog": ">=2.5",
         "core-js": "^3.2.1",
-        "@babel/core": "^7.5.5",
-        "@jitesoft/babel-preset-main": "^1.5.0",
+        "@babel/core": "^7.6.0",
+        "@jitesoft/babel-preset-main": "^1.6.0",
         "babel-loader": "^8.0.6",
         "cross-env": "^5.2.1",
         "webpack": "^4.39.3",
-        "webpack-cli": "^3.3.7",
+        "webpack-cli": "^3.3.8",
         "babel-eslint": "^10.0.3",
         "babel-jest": "^24.9.0",
         "eslint": "^6.3.0",
         "jest": "^24.9.0",
-        "@jitesoft/eslint-config": "^1.4.0"
+        "@jitesoft/eslint-config": "^1.6.0"
     },
     "scripts": {
-        "test": "eslint src/ tests/ && jest",
+        "test": "eslint src/ tests/ && jest && npm audit",
         "build": "cross-env NODE_ENV=production webpack -p"
     },
     "dependencies": {
-        "@jitesoft/sprintf": "^0.0.15"
+        "@jitesoft/sprintf": "^0.0.16"
     }
 }
