Moved some dependencies to external so that they are not bundled inside the minimized js file.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "esnext": {
         "main": "src/index.js"
     },
+    "module": "src/index.js",
     "main": "dist/index.js",
     "author": {
         "name": "Johannes Tegnér",
