--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,6 +26,7 @@ deploy:
     - npm publish --access public
   only:
     - tags
+  tags: [ jitesoft, protected, npm ]
 
 include:
   - https://gitlab.com/jitesoft/gitlab-ci-lib/raw/master/dependency_scanning.yml
