--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "file-logging"
     ],
     "engines": {
-        "node": ">=8"
+        "node": ">=10"
     },
     "jest": {
         "collectCoverage": true,
@@ -45,24 +45,24 @@
     },
     "devDependencies": {
         "@babel/core": "^7.7.4",
-        "@jitesoft/babel-preset-main": "^1.8.1",
-        "@jitesoft/eslint-config": "^1.8.1",
-        "@jitesoft/yolog": "^2.7.0",
+        "@jitesoft/babel-preset-main": "^1.8.4",
+        "@jitesoft/eslint-config": "^1.8.5",
+        "@jitesoft/yolog": "^2.7.1",
         "babel-eslint": "^10.0.3",
         "babel-jest": "^24.9.0",
         "babel-loader": "^8.0.6",
-        "core-js": "^3.4.5",
+        "core-js": "^3.4.8",
         "cross-env": "^6.0.3",
-        "eslint": "^6.7.1",
+        "eslint": "^6.7.2",
         "jest": "^24.9.0",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.10"
+        "webpack": "^5.0.0-beta.9",
+        "webpack-cli": "^4.0.0-beta.1"
     },
     "scripts": {
         "test": "eslint src/ tests/ && jest && npm audit",
         "build:prod": "cross-env NODE_ENV=production webpack -p"
     },
     "dependencies": {
-        "@jitesoft/sprintf": "^1.0.7"
+        "@jitesoft/sprintf": "^1.0.8"
     }
 }
